--- a/contato.html
+++ b/contato.html
@@ -26,12 +26,21 @@
             <h2>Hello Word</h2>
             <h2>Eu sou o Murilo</h2>
             <p>Desenvolverdor & Designer</p>
-            <p>Idade: 27</p>
-            <p>Localização: Santa Catarina, Brasil </p>
-            <p>E-mail: muriloferreira0497@gmail.com</p>
+            <table>
+                <tr>
+                    <td>Idade:</td>
+                    <td>27</td>
+                </tr>
+                <tr>
+                    <td>Localização:</td>
+                    <td>Santa Catarina, Brasil</td>
+                </tr>
+                <tr>
+                    <td>E-mail:</td>
+                    <td>muriloferreira0497@gmail.com</td>
+                </tr>
+            </table>
             <p> logo insta logo git logo twitter logo likedin logo Discord</p>
-  
-
         </section>
     
         <section id="texto">
