--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
       <main>
         <section id="identidade">
 
-            <img src="b71f1aec-04e8-4ffd-aab4-de2d94cf76ed.png" alt="Murilo">
+            <img src="imagens/b71f1aec-04e8-4ffd-aab4-de2d94cf76ed.png" alt="Murilo">
             <div class="txt-id"> 
             <h1>Hello Word</h1> 
             <h2>Eu sou o Murilo</h2> 
@@ -38,11 +38,11 @@
                 </tr>
             </table>
             <nav>
-                <img src="instagram_733614.png" alt="Instagram">
-                <img src="github_733609.png" alt="GitHub">
-                <img src="twitter_5968830.png" alt="Twitter">
-                <img src="linkedin_733617.png" alt="LinkedIn">
-                <img src="discord_2111363.png" alt="Discord">
+                <img src="imagens/instagram_733614.png" alt="Instagram">
+                <img src="imagens/github_733609.png" alt="GitHub">
+                <img src="imagens/twitter_5968830.png" alt="Twitter">
+                <img src="imagens/linkedin_733617.png" alt="LinkedIn">
+                <img src="imagens/discord_2111363.png" alt="Discord">
             </nav>
             </div>
         </section>
