--- a/contato.html
+++ b/contato.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#142026">
     <title>Murilo Ferreira</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -32,23 +33,19 @@
 
         <section id="identidade">
 
-                <img src="imagens/b71f1aec-04e8-4ffd-aab4-de2d94cf76ed.png" alt="Murilo">
+                <img src="imagens/b71f1aec-04e8-4ffd-aab4-de2d94cf76ed.png" alt="Murilo" id="foto">
             <div class="txt-id"> 
-            <h1>Hello Word & Welcome!</h1> 
+            <h1>Bem vindo ao meu site!</h1> 
             <h2>Eu sou o Murilo</h2> 
             <p>Desenvolverdor & Designer</p>
             <hr>
             <table>
                 <tr>
-                    <td><strong>Idade</strong></td>
-                    <td>27</td>
-                </tr>
-                <tr>
-                    <td><strong>Localização</strong></td>
+                    <td><img src="imagens/gps_15949802.png" alt="Localização" id="loc"></td>
                     <td>Santa Catarina, Brasil</td>
                 </tr>
                 <tr>
-                    <td><strong>E-mail</strong></td>
+                    <td><img src="imagens/communication_14952206.png" alt="E-mail" id="email"></td>
                     <td>muriloferreiradev@gmail.com</td>
                 </tr>
             </table>
